--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -20,13 +20,11 @@ Software design and architecture.
 
 ### Interests
 
-Functional programming with erlang and elixir. Efficient system development with c++ and rust.
-Improving my workflows with unix-tools such as vim, emacs, tmux and zsh. Making friends at work and having mostly productive, yet always fun pair-coding sessions. When I code by myself, I listen to dark ambient or snes soundtracks as background music.
+Functional programming, efficient system development, improving workflows and having fun with the code.
 
-I love:
+What I enjoy:
 * Reading books about software, horror, fantasy, religion, philosophy, mysticism and wisdom
-* Jamming to heavy metal songs with guitar
-* Playing and making my own computer role-playing games
+* Listening, composing and playing great music
 
 ## Work experience
 
@@ -114,14 +112,9 @@ Competent in sharing and seeking knowledge, along with ability to provide consis
 
 ## Computer skills
 
-I'm experienced with multiple programming languages, mainly elixir/erlang/otp, c#, c++ and javascript.
+I'm experienced with multiple programming languages, such as elixir/erlang/otp, java, c#, and typescript.
 I'm familiar with functional programming and design patterns. I'm also fluent with object-oriented programming.
 I have good knowledge and experience with both relational and nosql databases.
-
-My preferred development environment is unix-based machine with vim, emacs, tmux and zsh.
-I know my way around IDEs such as visual studio and intellij idea. I will not tremble in fear if I'm suddenly dropped in a remote bash shell.
-
-I'm passionate about code and I learn new languages and codebases fast.
 
 ### Important skill keywords
 
